--- a/getir/Base.lproj/Main.storyboard
+++ b/getir/Base.lproj/Main.storyboard
@@ -73,9 +73,6 @@
                                 <state key="normal" title="Filtre">
                                     <color key="titleColor" name="systemOrangeColor" catalog="System" colorSpace="catalog"/>
                                 </state>
-                                <connections>
-                                    <segue destination="UMn-pX-JMp" kind="presentation" id="wil-cz-vni"/>
-                                </connections>
                             </button>
                         </barButtonItem>
                     </navigationItem>
@@ -88,10 +85,10 @@
             </objects>
             <point key="canvasLocation" x="3274" y="-239"/>
         </scene>
-        <!--Pack Filter View Controller-->
+        <!--Filter View Controller-->
         <scene sceneID="jTC-CK-y2H">
             <objects>
-                <viewController id="xi0-P9-coI" customClass="PackFilterViewController" customModule="getir" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="xi0-P9-coI" customClass="FilterViewController" customModule="getir" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ogC-r5-fcZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -142,7 +139,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Başlangıç tarihi" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7EC-jN-zgT">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Başlangıç tarihi (Opsionel)" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7EC-jN-zgT">
                                                 <rect key="frame" x="33" y="234.5" width="309" height="36"/>
                                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                 <nil key="textColor"/>
@@ -195,13 +192,26 @@
                                         <state key="normal" title="Filtrele">
                                             <color key="titleColor" name="systemOrangeColor" catalog="System" colorSpace="catalog"/>
                                         </state>
+                                        <connections>
+                                            <action selector="filterButtonTapped" destination="xi0-P9-coI" eventType="touchUpInside" id="LWR-cf-gYv"/>
+                                        </connections>
                                     </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kUA-ZS-gJB">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="qxo-rh-3Fh"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="kUA-ZS-gJB" firstAttribute="leading" secondItem="wcu-st-msv" secondAttribute="leading" id="Uvr-gA-O3w"/>
+                                    <constraint firstAttribute="trailing" secondItem="kUA-ZS-gJB" secondAttribute="trailing" id="VQj-30-ufj"/>
                                     <constraint firstAttribute="height" constant="50" id="ZD3-K2-Mbx"/>
                                     <constraint firstItem="nah-gZ-WXB" firstAttribute="centerX" secondItem="wcu-st-msv" secondAttribute="centerX" id="Zte-wZ-InV"/>
                                     <constraint firstItem="nah-gZ-WXB" firstAttribute="centerY" secondItem="wcu-st-msv" secondAttribute="centerY" id="av5-ry-yh6"/>
+                                    <constraint firstItem="kUA-ZS-gJB" firstAttribute="top" secondItem="wcu-st-msv" secondAttribute="top" id="lJo-lO-FWi"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -225,6 +235,15 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="dateInformationLabel" destination="4yr-BO-J26" id="odM-ov-mSc"/>
+                        <outlet property="endDateTextField" destination="QAc-2h-8LD" id="qDU-Mj-vqM"/>
+                        <outlet property="filterButton" destination="nah-gZ-WXB" id="878-eX-tyy"/>
+                        <outlet property="fromTextField" destination="WfS-g9-Oaa" id="6zm-wq-kLX"/>
+                        <outlet property="startDateTextField" destination="7EC-jN-zgT" id="Hge-3g-hAZ"/>
+                        <outlet property="toTextField" destination="UAD-La-PVi" id="JEn-kN-hig"/>
+                        <outlet property="weightTextField" destination="TMZ-s8-qfS" id="Iyx-Hf-7aM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6We-0s-HDi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -367,7 +386,7 @@
         <!--Paketler-->
         <scene sceneID="hdp-0e-Jfs">
             <objects>
-                <navigationController id="UMn-pX-JMp" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="filterNC" id="UMn-pX-JMp" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Paketler" id="NcW-BK-XMQ"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="JBQ-re-V6l">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
